objects/CSS_WS_Account_Code_for_Warranty_Catalog__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CSS_WS_Account_Code__c</fullName>
        <label>Account Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Active__c</fullName>
        <inlineHelpText>Y or N</inlineHelpText>
        <label>Active</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_GL_Account__c</fullName>
        <label>GL Account</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_GL_Department__c</fullName>
        <label>GL Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Pay_Code_Name__c</fullName>
        <label>Pay Code Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Pay_Code__c</fullName>
        <label>Pay Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Usage__c</fullName>
        <label>Usage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CSS WS Account Code for Warranty Catalog</label>
</CustomObject>